# mnist_reader-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
