[package]
name = "mnist_reader"
version = "0.1.1"
edition = "2024"
authors = ["kujirahand <web@kujirahand.com>"]
description = "Download the MNIST dataset and simply read it."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kujirahand/mnist_reader-rust"
documentation = "https://docs.rs/mnist_reader"
keywords = ["mnist", "dataset", "reader", "ml"]
categories = ["science", "computer-vision"]
exclude = ["mnist-data"]

[dependencies]
flate2 = "1.1.1"
ureq = "3.0.11"
